--- a/VSA.Api/appsettings.json
+++ b/VSA.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "PostgreSQLDB": "Server=localhost; Port=5432 ;Database=vsa_db; User Id=dev_user; Password=password;"
+
 }
