[Feat]: Update Project

--- a/VSA.Api/VSA.Api.csproj
+++ b/VSA.Api/VSA.Api.csproj
@@ -31,7 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Instrument\" />
+    <Folder Include="Features\Instrument\Command\" />
+    <Folder Include="Features\Instrument\Models\" />
+    <Folder Include="Features\Instrument\Queries\" />
   </ItemGroup>
 
 </Project>
