--- a/VSA.Api/appsettings.json
+++ b/VSA.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
 
-  "PostgreSQLDB": "Server=91.151.83.102; Port=5432;Database=vsa_db;User Id=ikragulkocakteam; Password=Uzk1djYNjZnSzO*jaf9JxQOIk;"
+  "PostgreSQLDB": ""
 }
  
